# my-azure-page-blob-append

./: Cargo.toml
.github/workflows/: test.yml
src/: error.rs  lib.rs  my_date_time.rs  page_blob_append.rs  page_blob_append_cache.rs  page_blob_append_error.rs  page_blob_buffer.rs  page_blob_random_access.rs  page_blob_utils.rs  settings.rs  state.rs  state_data_initializing.rs  state_data_not_initialized.rs  state_data_writing.rs  with_retries.rs
src/blob_operations/: blob_cache.rs  copy_blob.rs  create_blob_if_not_exists.rs  create_container_if_not_exist.rs  get_available_pages_amount.rs  mod.rs  read_pages.rs  resize_page_blob.rs  write_pages.rs
src/pages_cache/: mod.rs  pages_cache.rs  pages_cache_item.rs  payloads_writer.rs
src/read_write/: cache.rs  mod.rs  package_builder.rs  page_blob_random_access.rs  page_blob_seq_reader.rs  page_blob_seq_reader_with_cache.rs  page_blob_seq_writer.rs  read_cache.rs  utils.rs  write_cache.rs
src/sequence_reader/: error.rs  mod.rs  page_blob_seq_reader.rs
src/states/: mod.rs  state.rs  state_data_corrupted.rs  state_data_not_initialized.rs  state_data_reading.rs  state_data_writing.rs  utils.rs
