[package]
name = "my-azure-page-blob-append"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-azure-storage-sdk = { git = "https://github.com/MyJetTools/my-azure-storage.git" }
my-azure-page-blob = { git = "https://github.com/MyJetTools/my-azure-page-blob.git" }
rust-extensions = { git = "https://github.com/MyJetTools/rust-extensions.git" }
tokio = { version = "*", features = ["full"] }
tokio-util = "*"
